examples/test/testpolicy14297.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14297
  namespace: namespace395
spec:
  podSelector:
    matchLabels:
      key10: value2
      key29: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value35
          key42: value28
      podSelector:
        matchLabels:
          key11: value9
          key14: value39
